titre plus slogan

--- a/index.html
+++ b/index.html
@@ -6,6 +6,15 @@
     <link rel="stylesheet" href="css/styles.css">
     <title></title>
   </head>
+  <header>
+    <div>
+      <h1>Techmag</h1>
+      <p class="slogan">
+          Le magazine qui parle des technologie!
+      </p>
+      
+    </div>
+  </header>
 
   <body></body>
 </html>
