fini le html avec main et le footer

--- a/index.html
+++ b/index.html
@@ -12,8 +12,36 @@
       <p class="slogan">
           Le magazine qui parle des technologie!
       </p>
-      
     </div>
+    <nav>
+
+      
+    </nav>
+    <main>
+      <div class="section-light">
+        <h2>Le monde change a pleine vitesse.</h2>
+      </div>
+      <p>Techmag est le magazine qui vous accompagne dans les 
+        changements de sociétés.
+      </p>
+      <img src="" alt="">
+      <div class="section-dark">
+        <h2> Nos produits</h2>
+        <h3>L'oiseau Twitter est-t-il en train de mourir?</h3>
+        <a href=""></a>
+        <h3> Le Bitcoin... bientot plus fort que le dollard?</h3>
+        <a href=""></a>
+        <img src="" alt="">
+      </div>
+      <div class="section-light">
+        <h2>Nous contacter?</h2>
+        <a href="Facebook"></a>
+        <a href="Instagram"></a>
+      </div>
+    </main>
+    <footer>
+      <p>Techmag est une marque déposée par Veggies inc. Switzerland.</p>
+    </footer>
   </header>
 
   <body></body>
