bouton "accèder aux articles" et "Nous contacter"

--- a/index.html
+++ b/index.html
@@ -13,11 +13,14 @@
           Le magazine qui parle des technologie!
       </p>
     </div>
-    <nav>
+    <nav> 
+      <a href="Accèder aux articles" class="act">Accèder aux articles</a>
+      <a href="Nous contacter" class="act-light"> Nous contacter</a>
+    </nav>
   </header>
 
       
-    </nav>
+   
     <main>
       <div class="section-light">
         <h2>Le monde change a pleine vitesse.</h2>
