presque fini les deux premier bouton aux couleurs inverser

--- a/index.html
+++ b/index.html
@@ -7,28 +7,22 @@
     <title></title>
   </head>
   <header>
-    <div>
-      <h1>Techmag</h1>
-      <p class="slogan">
-          Le magazine qui parle des technologie!
-      </p>
+    <div class="box-title">
+      <h1><img src="img/SVG/titre-techmag.svg" alt="Techmag"></h1>
+      <p class="slogan"> Le magazine qui parle des technologies!</p>
     </div>
     <nav> 
       <a href="Accèder aux articles" class="act">Accèder aux articles</a>
       <a href="Nous contacter" class="act-light"> Nous contacter</a>
     </nav>
   </header>
-
-      
-   
     <main>
       <div class="section-light">
         <h2>Le monde change a pleine vitesse.</h2>
+        <p>Techmag est le magazine qui vous accompagne dans les 
+          changements de sociétés. </p>
+        <img src="" alt="">
       </div>
-      <p>Techmag est le magazine qui vous accompagne dans les 
-        changements de sociétés.
-      </p>
-      <img src="" alt="">
       <div class="section-dark">
         <h2> Nos produits</h2>
         <h3>L'oiseau Twitter est-t-il en train de mourir?</h3>
