integration de l'image disquette plus ajout des deux dernier bouton

--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
   </head>
   <header>
     <div class="box-title">
-      <h1><img src="img/SVG/titre-techmag.svg" alt="Techmag"></h1>
+      <h1>
+        <img src="img/SVG/titre-techmag.svg" alt="Techmag">
+      </h1>
       <p class="slogan"> Le magazine qui parle des technologies!</p>
     </div>
     <nav> 
@@ -21,7 +23,7 @@
         <h2>Le monde change a pleine vitesse.</h2>
         <p>Techmag est le magazine qui vous accompagne dans les 
           changements de sociétés. </p>
-        <img src="" alt="">
+        <img class="disquette" src="img/SVG/disquette.svg" alt="disquette">
       </div>
       <div class="section-dark">
         <h2> Nos produits</h2>
@@ -33,8 +35,9 @@
       </div>
       <div class="section-light">
         <h2>Nous contacter?</h2>
-        <a href="Facebook"></a>
-        <a href="Instagram"></a>
+        <a href="facebook" class="act">Facebook</a>
+        <a href="instagnam" class="act">Instagram</a>
+
       </div>
     </main>
     <footer>
