mettre les background de  h2 et h3 en couleur

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <h3>L'oiseau Twitter est-t-il en train de mourir?</h3>
         <a href=""></a>
         <h3> Le Bitcoin... bientot plus fort que le dollard?</h3>
-        <a href=""></a>
+        <a href="En savoir plus"></a>
         <img src="" alt="">
       </div>
       <div class="section-light">
