changement de font plus ajout des lien "en savoir plus" et ajustement du titre

--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/styles.css">
     <title></title>
+    <link rel="stylesheet" href="<link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300;400&display=swap" rel="stylesheet">">
   </head>
   <header>
     <div class="box-title">
@@ -27,23 +30,24 @@
       </div>
       <div class="section-dark">
         <h2> Nos produits</h2>
-        <h3>L'oiseau Twitter est-t-il en train de mourir?</h3>
-        <a href=""></a>
-        <h3> Le Bitcoin... bientot plus fort que le dollard?</h3>
-        <a href="En savoir plus"></a>
-        <img src="" alt="">
+        <div class="produits">
+          <h3>L'oiseau Twitter est-t-il en train de mourir?</h3>
+          <a href="en-savoir-plus">En savoir plus</a>
+        </div>
+        <div class="produits">
+          <h3> Le Bitcoin... bientot plus fort que le dollard?</h3>
+          <a href="en-savoir-plus">En savoir plus</a> 
+        </div>
       </div>
       <div class="section-light">
         <h2>Nous contacter?</h2>
         <a href="facebook" class="act">Facebook</a>
         <a href="instagnam" class="act">Instagram</a>
-
       </div>
     </main>
     <footer>
       <p>Techmag est une marque déposée par Veggies inc. Switzerland.</p>
     </footer>
   
-
   <body></body>
 </html>
