integration de l'image oiseau et dollar

--- a/index.html
+++ b/index.html
@@ -32,10 +32,12 @@
         <h2> Nos produits</h2>
         <div class="produits">
           <h3>L'oiseau Twitter est-t-il en train de mourir?</h3>
+          <img class="bird" src="img/SVG/oiseau.svg" alt="oiseau">
           <a href="en-savoir-plus">En savoir plus</a>
         </div>
         <div class="produits">
           <h3> Le Bitcoin... bientot plus fort que le dollard?</h3>
+          <img class="dollar" src="img/SVG/dollar.svg" alt="dollar">
           <a href="en-savoir-plus">En savoir plus</a> 
         </div>
       </div>
