modification du bouton " nous contacter" modification du bouton" instagram"

--- a/index.html
+++ b/index.html
@@ -43,12 +43,14 @@
       </div>
       <div class="section-light">
         <h2>Nous contacter?</h2>
-        <a href="facebook" class="act">Facebook</a>
-        <a href="instagnam" class="act">Instagram</a>
+        <a href="facebook" class="act-f">Facebook</a>
+        <a href="instagnam" class="act-i">Instagram</a>
       </div>
     </main>
     <footer>
-      <p>Techmag est une marque déposée par Veggies inc. Switzerland.</p>
+      <p> Techmag est une marque déposée par Veggies inc.
+      Switzerland.</p>
+   
     </footer>
   
   <body></body>
